@@ -20,6 +20,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #17839: base64.decodebytes and base64.encodebytes now accept any
+  object that exports a 1 dimensional array of bytes (this means the same
+  is now also true for base64_codec)
+
 - Issue #19132: The pprint module now supports compact mode.
 
 - Issue #19137: The pprint module now correctly formats instances of set and
